# domain-scraper

./: Dockerfile  README.md  diff_csv_pages.py  docker-compose.yml  pyproject.toml  requirements.txt  scrapy.cfg  setup.py
alembic/: env.py
alembic/versions/: 1f22c338caf8_add_last_modified_field_for_files.py  2580e244ba18_require_page_and_file_hashes_to_be_.py  5da82c27cbf7_add_file_and_page_tables.py  6c655b04cdf5_add_key_field_to_file.py  b3163d6cf65d_.py  c32038686f51_page_referrer_can_be_null_but_file_.py  ce160d5ec8dc_add_key_field_to_file.py  cebae004d25a_add_scrape_table.py
govzasurvey/: items.py  middlewares.py  models.py  pipelines.py  settings.py
govzasurvey/spiders/: govza.py
tests/: test_spider.py
tests/test_spider_files/: recursive_relative_paths_mngeni.html  test_emit_requests_to_crawl.html  test_emit_requests_to_crawl2.html
