[tool.poetry]
name = "govzasurvey"
version = "0.1.0"
description = ""
authors = ["JD Bothma <jbothma@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
Scrapy = "^2.6.2"
alembic = "^1.8.1"
SQLAlchemy = "^1.4.39"
psycopg2 = "^2.9.3"
boto3 = "^1.24.49"

[tool.poetry.dev-dependencies]

[tool.poetry.group.dev.dependencies]
pytest = "^7.3.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
